--- a/static/contact/contact.css
+++ b/static/contact/contact.css
@@ -6,7 +6,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url(/media/contactbg.png);
+  background-image: url(./media/contactbg.png);
   background-size: 150%;
   background-position: center;
   background-repeat: no-repeat;
