--- a/static/works/works.css
+++ b/static/works/works.css
@@ -13,7 +13,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url(/media/worksbg.png);
+  background-image: url(./media/worksbg.png);
   background-size: 150%;
   background-position: center;
   background-repeat: no-repeat;
