--- a/static/works/works.css
+++ b/static/works/works.css
@@ -13,7 +13,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  background-image: url(./media/worksbg.png);
+  background-image: url(/media/worksbg.png);
   background-size: 150%;
   background-position: center;
   background-repeat: no-repeat;
@@ -121,17 +121,17 @@
   opacity: 0.85;
 }
 .workModalInner a {
-    position: absolute;
-    bottom: 0;
-    margin-bottom: 15px;
-    background-color: rgb(4, 38, 69);
-    padding: 15px 25px;
-    border-radius: 15px;
-    text-decoration: none;
-    font-family: Inter;
-    font-weight: 100;
-    color: white;
-    font-size: clamp(22px, 2vw, 40px);
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 15px;
+  background-color: rgb(4, 38, 69);
+  padding: 15px 25px;
+  border-radius: 15px;
+  text-decoration: none;
+  font-family: Inter;
+  font-weight: 100;
+  color: white;
+  font-size: clamp(22px, 2vw, 40px);
 }
 .workModalContent::-webkit-scrollbar {
   width: 8px;
