Update "Inter" font path

--- a/static/shared.css
+++ b/static/shared.css
@@ -12,7 +12,7 @@ body {
 }
 @font-face {
   font-family: Inter;
-  src: url(media/fonts/Inter-VariableFont_opsz,wght.ttf);
+  src: url(media/fonts/Inter.ttf);
 }
 @font-face {
   font-family: audiowide;
