--- a/static/shared.css
+++ b/static/shared.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  font-family: "Inter";
+  font-family: sans-serif;
   background: #000000;
 }
 @font-face {
