--- a/static/shared.css
+++ b/static/shared.css
@@ -7,7 +7,18 @@ body {
   margin: 0;
   padding: 0;
   color: white;
-  font-family: sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
   background: #000000;
 }
 @font-face {
